--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title></title>
 </head>
 <body>
-<p>This is the para
-    </p> 
-    <hi>Thid id the end</hi>
+    <h1>Software develpore</h1>
+    <p>
+        yes i am a software developer
+    </p>
 </body>
 </html>
